--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,14 +1,19 @@
 body {
     font-family: 'Roboto', sans-serif;
     position: relative;
+    background-color: #f3f3f3;
+    padding: 0;
+}
+main {
+    padding: 20px 0;
 }
 h1 {
     font-weight: 300;
     font-size: 1.5em;
 }
 h2 {
-    font-size: 1.6em;
-    font-weight: 700;
+    font-size: 1.2em;
+    font-weight: 400;
     padding-bottom: 20px;
 }
 h3 {
@@ -17,7 +22,7 @@ h3 {
     padding-bottom: 5px;
 }
 section {
-    padding: 50px 20px;
+    padding: 50px 0;
 }
 a {
     text-decoration: none;
