--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,1 +1,100 @@
 @import "./main.scss";
+
+main {
+    display: flex;
+    flex-direction: column;
+    #call-to-action {
+        position: relative;
+        flex-basis: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        figure {
+            display: flex;
+            flex-basis: 100%;
+            padding: 0;
+            justify-content: center;
+
+        }
+        figure > img {
+            width: 100%;
+            height: 400px;
+            object-fit: content;
+        }
+        figure > div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            position: absolute;
+            top: 30px;
+            align-self: center;
+            height: 150px;
+            width: 300px;
+            background-color: yellow;
+            opacity: 0.5;
+            border-radius: 20px;
+            padding: 20px;
+            h1 {
+                text-align: center;
+            }
+        }
+    }
+    #engagements {
+        display: flex;
+        padding: 20px;
+        flex-direction: column;
+        justify-content: space-between;
+         div {
+            display: flex;
+            flex-basis: 100%;
+            min-height: 120px;
+            background-color: yellowgreen;
+            opacity: 0.6;
+            margin-bottom: 20px;
+            justify-content: center;
+            align-items: center;
+            border-radius: 20px;
+        
+        }
+    }
+    #products {
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        h2 {
+            flex-basis: 100%;
+        }
+        div {
+            display: flex;
+            font-size: 0.8em;
+            border: solid 2px yellowgreen;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+    }
+    #producteurs {
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        h2 {
+            flex-basis: 100%;
+        }
+        div {
+            display: flex;
+            font-size: 0.5em;
+            border: solid 2px yellowgreen;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+    }
+}
