--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -8,7 +8,7 @@ header {
         height: 100px;
         width: auto;
     }
-    #promotion {
+    #top-info {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -25,6 +25,5 @@ header {
 }
 main {
     z-index: 1;
-    padding: 20px;
 }
 
