--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -8,8 +8,10 @@ main {
     padding: 20px 0;
 }
 h1 {
-    font-weight: 300;
-    font-size: 1.5em;
+    font-weight: 100;
+    font-size: 1.8em;
+    color: white;
+    font-family: 'Dosis', sans-serif;
 }
 h2 {
     font-size: 1.2em;
