--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,6 +1,9 @@
 @import "./main.scss";
 
+
+
 main {
+    padding-top: 120px;
     display: flex;
     flex-direction: column;
     #call-to-action {
@@ -14,28 +17,42 @@ main {
             flex-basis: 100%;
             padding: 0;
             justify-content: center;
-
+            align-items: center;
         }
         figure > img {
             width: 100%;
             height: 400px;
             object-fit: content;
+            z-index: 1;
         }
         figure > div {
             display: flex;
+            z-index: 3;
             flex-direction: column;
             justify-content: center;
             position: absolute;
-            top: 30px;
-            align-self: center;
-            height: 150px;
+            top: 80px;
+            height: 200px;
             width: 300px;
-            background-color: yellow;
-            opacity: 0.5;
+            background-color: rgba(255, 208, 0, 0.493);
+            opacity: 0.9;
             border-radius: 20px;
             padding: 20px;
+            border: solid 3px rgba(55, 97, 8, 0.452);
             h1 {
                 text-align: center;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            button {
+                width: 200px;
+                background-color: rgba(55, 97, 8, 0.452);
+                align-self: center;
+                padding: 10px 20px;
+                margin-top: 30px;
+                color: white;
+                font-weight: 600;
+                border: solid 3px white;
+                border-radius: 50px;
             }
         }
     }
