--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -8,15 +8,18 @@ main {
     padding: 20px 0;
 }
 h1 {
-    font-weight: 100;
-    font-size: 1.8em;
-    color: white;
-    font-family: 'Dosis', sans-serif;
+    font-weight: 500;
+    font-size: 2.5em;
+    color: rgb(219, 106, 13);
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
 }
 h2 {
-    font-size: 1.2em;
-    font-weight: 400;
+    font-size: 1.9em;
+    font-weight: 900;
     padding-bottom: 20px;
+    color: rgb(66, 65, 65);
+    font-family: 'Dancing Script', cursive;
 }
 h3 {
     font-size: 1.1em;
