--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -24,6 +24,7 @@ main {
             height: 400px;
             object-fit: content;
             z-index: 1;
+            border-bottom: solid 7px rgba(214, 159, 7, 0.747);
         }
         figure > div {
             display: flex;
@@ -31,28 +32,28 @@ main {
             flex-direction: column;
             justify-content: center;
             position: absolute;
-            top: 80px;
+            top: 100px;
             height: 200px;
             width: 300px;
-            background-color: rgba(255, 208, 0, 0.493);
+            background-color: rgba(250, 250, 246, 0.856);
             opacity: 0.9;
             border-radius: 20px;
             padding: 20px;
-            border: solid 3px rgba(55, 97, 8, 0.452);
-            h1 {
-                text-align: center;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-            button {
-                width: 200px;
-                background-color: rgba(55, 97, 8, 0.452);
-                align-self: center;
-                padding: 10px 20px;
-                margin-top: 30px;
+            border: solid 7px rgba(214, 159, 7, 0.747);
+            a {
                 color: white;
-                font-weight: 600;
-                border: solid 3px white;
+                font-weight: 500;
+                padding: 15px 20px;
+                background-image: linear-gradient(rgba(230, 202, 45, 0.473), rgb(219, 106, 13));
                 border-radius: 50px;
+                box-shadow: 2px 6px 19px -7px rgba(0,0,0,0.4);
+                margin: 30px auto;
+                transition: all 0.4s;
+
+                &:hover {
+                    opacity: 0.7;
+                    box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
+                }
             }
         }
     }
