--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -7,8 +7,9 @@ header {
     padding: 40px 0 10px 0;
     width: 100%;
     z-index: 100;
+    border-bottom: solid 7px rgba(214, 159, 7, 0.747);
     a > img {
-        height: 75px;
+        height: 120px;
         width: auto;
     }
     #top-info {
@@ -20,14 +21,15 @@ header {
         right: 0; 
         height: 30px;
         width: 100%;
-        background-color: rgba(255, 187, 0, 0.705);
+        color: white;
+        background-color: rgba(238, 204, 10, 0.795);
         p {
             text-align: center;
         }
     }
     #icons-bars-menu {
         position: absolute;
-        top: 60px;
+        top: 85px;
         left: 30px;
         font-size: 30px;
         opacity: 0.7;
