--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,8 +79,8 @@ h2 {
   font-family: 'Dancing Script', cursive; }
 
 h3 {
-  font-size: 1.1em;
-  font-weight: 700;
+  font-size: 0.8em;
+  font-weight: 500;
   padding-bottom: 5px; }
 
 section {
@@ -194,10 +194,27 @@ main {
           opacity: 0.7;
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4); }
   main #engagements {
+    margin-top: 30px;
     display: flex;
     padding: 20px;
     flex-direction: column;
-    justify-content: space-between; }
+    justify-content: space-between;
+    row-gap: 20px; }
+    main #engagements article {
+      display: flex;
+      flex-direction: column;
+      box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
+      border-radius: 20px; }
+      main #engagements article figure {
+        flex-basis: 100%; }
+      main #engagements article img {
+        width: 100%;
+        height: 110px;
+        border-top-right-radius: 20px;
+        border-top-left-radius: 20px;
+        object-fit: cover; }
+      main #engagements article h3 {
+        padding: 15px; }
     main #engagements div {
       display: flex;
       flex-basis: 100%;
