--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -58,10 +58,32 @@ main {
         }
     }
     #engagements {
+        margin-top: 30px;
         display: flex;
         padding: 20px;
         flex-direction: column;
         justify-content: space-between;
+        row-gap: 20px;
+        article {
+            display: flex;
+            flex-direction: column;
+            box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
+            border-radius: 20px;
+            figure {
+                flex-basis: 100%;
+
+            }
+            img {
+                width: 100%;
+                height: 110px;
+                border-top-right-radius: 20px;
+                border-top-left-radius: 20px;
+                object-fit: cover;
+            }
+            h3 {
+                padding: 15px;
+            }
+        }
          div {
             display: flex;
             flex-basis: 100%;
