--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,10 +226,29 @@ main {
       align-items: center;
       border-radius: 20px; }
   main #products {
-    padding: 20px;
+    margin-top: 30px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; }
+    padding: 20px;
+    flex-direction: column;
+    justify-content: space-between;
+    row-gap: 20px; }
+    main #products article {
+      border: solid 3px #cfb20a;
+      display: flex;
+      flex-direction: row;
+      box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
+      border-radius: 20px; }
+      main #products article figure {
+        flex-basis: 100%; }
+      main #products article img {
+        width: 75%;
+        height: 170px;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        object-fit: cover; }
+      main #products article h3 {
+        padding: 15px;
+        width: 20%; }
     main #products h2 {
       flex-basis: 100%; }
     main #products div {
