--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -98,10 +98,33 @@ main {
         }
     }
     #products {
-        padding: 20px;
+        margin-top: 30px;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        padding: 20px;
+        flex-direction: column;
+        justify-content: space-between;
+        row-gap: 20px;
+        article {
+            border: solid 3px rgb(207, 178, 10);
+            display: flex;
+            flex-direction: row;
+            box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
+            border-radius: 20px;
+            figure {
+                flex-basis: 100%;
+            }
+            img {
+                width: 75%;
+                height: 170px;
+                border-top-left-radius: 20px;
+                border-bottom-left-radius: 20px;
+                object-fit: cover;
+            }
+            h3 {
+                padding: 15px;
+                width: 20%;
+            }
+        }
         h2 {
             flex-basis: 100%;
         }
@@ -116,12 +139,14 @@ main {
             align-items: center;
             text-align: center;
         }
+        
     }
     #producteurs {
         padding: 20px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+
         h2 {
             flex-basis: 100%;
         }
