--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,9 +65,9 @@ main {
   padding: 20px 0; }
 
 h1 {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 2.5em;
-  color: #db6a0d;
+  color: #fffffe;
   font-family: 'Dancing Script', cursive;
   text-align: center; }
 
@@ -119,7 +119,7 @@ header {
   padding: 40px 0 10px 0;
   width: 100%;
   z-index: 100;
-  border-bottom: solid 7px rgba(214, 159, 7, 0.747); }
+  border-bottom: solid 3px rgba(214, 159, 7, 0.747); }
   header a > img {
     height: 120px;
     width: auto; }
@@ -148,7 +148,8 @@ header {
 main {
   padding-top: 120px;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  background-color: white; }
   main #call-to-action {
     position: relative;
     flex-basis: 100%;
@@ -166,7 +167,7 @@ main {
       height: 400px;
       object-fit: content;
       z-index: 1;
-      border-bottom: solid 7px rgba(214, 159, 7, 0.747); }
+      border-bottom: solid 3px rgba(214, 159, 7, 0.747); }
     main #call-to-action figure > div {
       display: flex;
       z-index: 3;
@@ -176,11 +177,10 @@ main {
       top: 100px;
       height: 200px;
       width: 300px;
-      background-color: rgba(250, 250, 246, 0.856);
-      opacity: 0.9;
+      background-color: rgba(250, 250, 246, 0.4);
       border-radius: 20px;
       padding: 20px;
-      border: solid 7px rgba(214, 159, 7, 0.747); }
+      border: solid 3px rgba(214, 159, 7, 0.747); }
       main #call-to-action figure > div a {
         color: white;
         font-weight: 500;
@@ -226,6 +226,7 @@ main {
       align-items: center;
       border-radius: 20px; }
   main #products {
+    background-color: rgba(248, 243, 218, 0.836);
     margin-top: 30px;
     display: flex;
     padding: 20px;
@@ -233,7 +234,8 @@ main {
     justify-content: space-between;
     row-gap: 20px; }
     main #products article {
-      border: solid 3px #cfb20a;
+      background-color: white;
+      border: solid 4px white;
       display: flex;
       flex-direction: row;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
