--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -6,6 +6,7 @@ main {
     padding-top: 120px;
     display: flex;
     flex-direction: column;
+    background-color: white;
     #call-to-action {
         position: relative;
         flex-basis: 100%;
@@ -24,7 +25,7 @@ main {
             height: 400px;
             object-fit: content;
             z-index: 1;
-            border-bottom: solid 7px rgba(214, 159, 7, 0.747);
+            border-bottom: solid 3px rgba(214, 159, 7, 0.747);
         }
         figure > div {
             display: flex;
@@ -35,11 +36,11 @@ main {
             top: 100px;
             height: 200px;
             width: 300px;
-            background-color: rgba(250, 250, 246, 0.856);
-            opacity: 0.9;
+            background-color: rgba(250, 250, 246, 0.4);
+            //opacity: 0.9;
             border-radius: 20px;
             padding: 20px;
-            border: solid 7px rgba(214, 159, 7, 0.747);
+            border: solid 3px rgba(214, 159, 7, 0.747);
             a {
                 color: white;
                 font-weight: 500;
@@ -98,6 +99,7 @@ main {
         }
     }
     #products {
+        background-color: rgba(248, 243, 218, 0.836);
         margin-top: 30px;
         display: flex;
         padding: 20px;
@@ -105,7 +107,8 @@ main {
         justify-content: space-between;
         row-gap: 20px;
         article {
-            border: solid 3px rgb(207, 178, 10);
+            background-color: white;
+            border: solid 4px white;
             display: flex;
             flex-direction: row;
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
