--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,10 +162,10 @@ main {
       padding: 0;
       justify-content: center;
       align-items: center; }
-    main #call-to-action figure > img {
+    main #call-to-action figure > video {
       width: 100%;
       height: 400px;
-      object-fit: content;
+      object-fit: cover;
       z-index: 1;
       border-bottom: solid 3px rgba(214, 159, 7, 0.747); }
     main #call-to-action figure > div {
@@ -206,10 +206,10 @@ main {
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
       border-radius: 20px; }
       main #engagements article figure {
-        flex-basis: 100%; }
+        flex-basis: 90%; }
       main #engagements article img {
         width: 100%;
-        height: 110px;
+        height: 130px;
         border-top-right-radius: 20px;
         border-top-left-radius: 20px;
         object-fit: cover; }
