--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -20,10 +20,10 @@ main {
             justify-content: center;
             align-items: center;
         }
-        figure > img {
+        figure > video {
             width: 100%;
             height: 400px;
-            object-fit: content;
+            object-fit: cover;
             z-index: 1;
             border-bottom: solid 3px rgba(214, 159, 7, 0.747);
         }
@@ -71,12 +71,12 @@ main {
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
             border-radius: 20px;
             figure {
-                flex-basis: 100%;
+                flex-basis: 90%;
 
             }
             img {
                 width: 100%;
-                height: 110px;
+                height: 130px;
                 border-top-right-radius: 20px;
                 border-top-left-radius: 20px;
                 object-fit: cover;
