--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -22,6 +22,7 @@ main {
         }
         figure > video {
             width: 100%;
+            max-width: 100%;
             height: 400px;
             object-fit: cover;
             z-index: 1;
