--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ main {
     padding: 20px;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 20px; }
+    row-gap: 30px; }
     main #engagements article {
       display: flex;
       flex-direction: column;
@@ -228,12 +228,12 @@ main {
       border-radius: 20px; }
   main #products {
     background-color: rgba(235, 231, 217, 0.432);
-    margin-top: 30px;
+    margin-top: 40px;
     display: flex;
-    padding: 20px;
+    padding: 50px 20px;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 20px; }
+    row-gap: 30px; }
     main #products article {
       background-color: white;
       border: solid 4px white;
