--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -65,7 +65,7 @@ main {
         padding: 20px;
         flex-direction: column;
         justify-content: space-between;
-        row-gap: 20px;
+        row-gap: 30px;
         article {
             display: flex;
             flex-direction: column;
@@ -101,12 +101,12 @@ main {
     }
     #products {
         background-color: rgba(235, 231, 217, 0.432);
-        margin-top: 30px;
+        margin-top: 40px;
         display: flex;
-        padding: 20px;
+        padding: 50px 20px;
         flex-direction: column;
         justify-content: space-between;
-        row-gap: 20px;
+        row-gap: 30px;
         article {
             background-color: white;
             border: solid 4px white;
