--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rampart+One&family=Urbanist:ital,wght@1,100;1,900&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -65,11 +66,19 @@ main {
   padding: 20px 0; }
 
 h1 {
-  font-weight: 700;
-  font-size: 2.5em;
-  color: #fffffe;
-  font-family: 'Dancing Script', cursive;
-  text-align: center; }
+  font-weight: 900;
+  font-size: 1.6em;
+  color: white;
+  font-family: 'Urbanist', sans-serif;
+  border-radius: 20px;
+  padding: 10px 20px;
+  text-shadow: 1px 0px 8px rgba(0, 0, 0, 0.93); }
+
+#flag-blue {
+  color: #0c0cee; }
+
+#flag-red {
+  color: red; }
 
 h2 {
   font-size: 1.9em;
@@ -146,7 +155,7 @@ header {
     display: none; }
 
 main {
-  padding-top: 120px;
+  padding-top: 170px;
   display: flex;
   flex-direction: column;
   background-color: white; }
@@ -162,10 +171,10 @@ main {
       padding: 0;
       justify-content: center;
       align-items: center; }
-    main #call-to-action figure > video {
+    main #call-to-action figure > img {
       width: 100%;
       max-width: 100%;
-      height: 400px;
+      height: 350px;
       object-fit: cover;
       z-index: 1;
       border-bottom: solid 3px rgba(214, 159, 7, 0.747); }
@@ -175,25 +184,29 @@ main {
       flex-direction: column;
       justify-content: center;
       position: absolute;
-      top: 100px;
-      height: 200px;
-      width: 300px;
-      background-color: rgba(250, 250, 246, 0.4);
-      border-radius: 20px;
+      top: 65px;
+      height: 150px;
+      width: 200px;
+      background-color: rgba(250, 250, 246, 0.9);
+      opacity: 0.9;
+      border-radius: 3px;
       padding: 20px;
       border: solid 3px rgba(214, 159, 7, 0.747); }
       main #call-to-action figure > div a {
         color: white;
         font-weight: 500;
-        padding: 15px 20px;
-        background-image: linear-gradient(rgba(230, 202, 45, 0.473), #db6a0d);
-        border-radius: 50px;
+        padding: 9px 2px;
+        text-align: center;
+        box-shadow: 1px 0px 8px rgba(0, 0, 0, 0.93);
+        background-image: linear-gradient(rgba(250, 250, 250, 0.473), #0d1bdb);
+        border-radius: 10%;
         box-shadow: 2px 6px 19px -7px rgba(0, 0, 0, 0.4);
-        margin: 30px auto;
-        transition: all 0.4s; }
+        transition: all 1.4s;
+        opacity: 0.7; }
         main #call-to-action figure > div a:hover {
-          opacity: 0.7;
-          box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4); }
+          opacity: 0.8;
+          box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
+          background-image: linear-gradient(red, rgba(250, 250, 250, 0.473)); }
   main #engagements {
     margin-top: 30px;
     display: flex;
@@ -236,19 +249,25 @@ main {
     row-gap: 30px; }
     main #products article {
       background-color: white;
-      border: solid 4px white;
+      opacity: 0.8;
+      padding: 10px;
       display: flex;
       flex-direction: row;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
-      border-radius: 20px; }
+      border-radius: 20px;
+      height: 240px;
+      background-image: url("/assets/img/texture-nape.png");
+      background-position: bottom;
+      background-size: 50%; }
       main #products article figure {
         flex-basis: 100%; }
       main #products article img {
         width: 100%;
-        height: 180px;
+        height: 170px;
+        border-top-right-radius: 20px;
         border-top-left-radius: 20px;
-        border-bottom-left-radius: 20px;
-        object-fit: cover; }
+        object-fit: cover;
+        object-position: bottom; }
       main #products article h3 {
         padding: 15px;
         width: 20%; }
