--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,7 +3,7 @@
 
 
 main {
-    padding-top: 120px;
+    padding-top: 170px;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -20,10 +20,10 @@ main {
             justify-content: center;
             align-items: center;
         }
-        figure > video {
+        figure > img {
             width: 100%;
             max-width: 100%;
-            height: 400px;
+            height: 350px;
             object-fit: cover;
             z-index: 1;
             border-bottom: solid 3px rgba(214, 159, 7, 0.747);
@@ -34,27 +34,30 @@ main {
             flex-direction: column;
             justify-content: center;
             position: absolute;
-            top: 100px;
-            height: 200px;
-            width: 300px;
-            background-color: rgba(250, 250, 246, 0.4);
-            //opacity: 0.9;
-            border-radius: 20px;
+            top: 65px;
+            height: 150px;
+            width: 200px;
+            background-color: rgba(250, 250, 246, 0.9);
+            opacity: 0.9;
+            border-radius: 3px;
             padding: 20px;
             border: solid 3px rgba(214, 159, 7, 0.747);
             a {
                 color: white;
                 font-weight: 500;
-                padding: 15px 20px;
-                background-image: linear-gradient(rgba(230, 202, 45, 0.473), rgb(219, 106, 13));
-                border-radius: 50px;
+                padding: 9px 2px;
+                text-align: center;
+                box-shadow: 1px 0px 8px rgba(0,0,0,0.93);
+                background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
+                border-radius: 10%;
                 box-shadow: 2px 6px 19px -7px rgba(0,0,0,0.4);
-                margin: 30px auto;
-                transition: all 0.4s;
+                transition: all 1.4s;
+                opacity: 0.7;
 
                 &:hover {
-                    opacity: 0.7;
+                    opacity: 0.8;
                     box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
+                    background-image: linear-gradient(rgb(255, 0, 0), rgba(250, 250, 250, 0.473));
                 }
             }
         }
@@ -109,20 +112,26 @@ main {
         row-gap: 30px;
         article {
             background-color: white;
-            border: solid 4px white;
+            opacity: 0.8;
+            padding: 10px;
             display: flex;
             flex-direction: row;
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
             border-radius: 20px;
+            height: 240px;
+            background-image: url("/assets/img/texture-nape.png");
+            background-position: bottom;
+            background-size: 50%;
             figure {
                 flex-basis: 100%;
             }
             img {
                 width: 100%;
-                height: 180px;
+                height: 170px;
+                border-top-right-radius: 20px;
                 border-top-left-radius: 20px;
-                border-bottom-left-radius: 20px;
                 object-fit: cover;
+                object-position: bottom;
             }
             h3 {
                 padding: 15px;
