changed style of call to action

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,9 +128,9 @@ header {
   padding: 40px 0 10px 0;
   width: 100%;
   z-index: 100;
-  border-bottom: solid 3px rgba(214, 159, 7, 0.747); }
+  border-bottom: solid 3px rgba(0, 0, 0, 0.747); }
   header a > img {
-    height: 120px;
+    height: 145px;
     width: auto; }
   header #top-info {
     display: flex;
@@ -142,7 +142,11 @@ header {
     height: 30px;
     width: 100%;
     color: white;
-    background-color: rgba(238, 204, 10, 0.795); }
+    font-weight: 900;
+    text-shadow: 1px 0px 8px rgba(0, 0, 0, 0.93);
+    background-image: url(/assets/img/texture-nape.png);
+    background-size: 50%;
+    opacity: 0.7; }
     header #top-info p {
       text-align: center; }
   header #icons-bars-menu {
@@ -155,7 +159,7 @@ header {
     display: none; }
 
 main {
-  padding-top: 170px;
+  padding-top: 140px;
   display: flex;
   flex-direction: column;
   background-color: white; }
@@ -177,36 +181,37 @@ main {
       height: 350px;
       object-fit: cover;
       z-index: 1;
-      border-bottom: solid 3px rgba(214, 159, 7, 0.747); }
+      border-bottom: solid 3px rgba(5, 5, 5, 0.747); }
     main #call-to-action figure > div {
       display: flex;
       z-index: 3;
       flex-direction: column;
       justify-content: center;
       position: absolute;
-      top: 65px;
-      height: 150px;
+      top: 100px;
+      height: 140px;
       width: 200px;
       background-color: rgba(250, 250, 246, 0.9);
       opacity: 0.9;
       border-radius: 3px;
       padding: 20px;
-      border: solid 3px rgba(214, 159, 7, 0.747); }
+      border: solid 3px rgba(5, 5, 5, 0.747); }
       main #call-to-action figure > div a {
-        color: white;
+        color: black;
+        border: 2px solid black;
         font-weight: 500;
         padding: 9px 2px;
         text-align: center;
         box-shadow: 1px 0px 8px rgba(0, 0, 0, 0.93);
-        background-image: linear-gradient(rgba(250, 250, 250, 0.473), #0d1bdb);
-        border-radius: 10%;
+        border-radius: 4px;
         box-shadow: 2px 6px 19px -7px rgba(0, 0, 0, 0.4);
         transition: all 1.4s;
         opacity: 0.7; }
         main #call-to-action figure > div a:hover {
+          color: white;
+          background-color: black;
           opacity: 0.8;
-          box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
-          background-image: linear-gradient(red, rgba(250, 250, 250, 0.473)); }
+          box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4); }
   main #engagements {
     margin-top: 30px;
     display: flex;
