--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,7 +3,7 @@
 
 
 main {
-    padding-top: 170px;
+    padding-top: 140px;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -26,7 +26,7 @@ main {
             height: 350px;
             object-fit: cover;
             z-index: 1;
-            border-bottom: solid 3px rgba(214, 159, 7, 0.747);
+            border-bottom: solid 3px rgba(5, 5, 5, 0.747);
         }
         figure > div {
             display: flex;
@@ -34,30 +34,33 @@ main {
             flex-direction: column;
             justify-content: center;
             position: absolute;
-            top: 65px;
-            height: 150px;
+            top: 100px;
+            height: 140px;
             width: 200px;
             background-color: rgba(250, 250, 246, 0.9);
             opacity: 0.9;
             border-radius: 3px;
             padding: 20px;
-            border: solid 3px rgba(214, 159, 7, 0.747);
+            border: solid 3px rgba(5, 5, 5, 0.747);
             a {
-                color: white;
+                color: black;
+                border: 2px solid black;
                 font-weight: 500;
                 padding: 9px 2px;
                 text-align: center;
                 box-shadow: 1px 0px 8px rgba(0,0,0,0.93);
-                background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
-                border-radius: 10%;
+                //background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
+                border-radius: 4px;
                 box-shadow: 2px 6px 19px -7px rgba(0,0,0,0.4);
                 transition: all 1.4s;
                 opacity: 0.7;
 
                 &:hover {
+                    color: white;
+                    background-color: black;
                     opacity: 0.8;
                     box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
-                    background-image: linear-gradient(rgb(255, 0, 0), rgba(250, 250, 250, 0.473));
+                    //background-image: linear-gradient(rgb(255, 0, 0), rgba(250, 250, 250, 0.473));
                 }
             }
         }
