--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -7,9 +7,9 @@ header {
     padding: 40px 0 10px 0;
     width: 100%;
     z-index: 100;
-    border-bottom: solid 3px rgba(214, 159, 7, 0.747);
+    border-bottom: solid 3px rgba(0, 0, 0, 0.747);
     a > img {
-        height: 120px;
+        height: 145px;
         width: auto;
     }
     #top-info {
@@ -22,7 +22,11 @@ header {
         height: 30px;
         width: 100%;
         color: white;
-        background-color: rgba(238, 204, 10, 0.795);
+        font-weight: 900;
+        text-shadow: 1px 0px 8px rgba(0,0,0,0.93);
+        background-image: url(/assets/img/texture-nape.png);
+        background-size: 50%;
+        opacity: 0.7;
         p {
             text-align: center;
         }
