--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -24,7 +24,7 @@ header {
         color: white;
         font-weight: 900;
         text-shadow: 1px 0px 8px rgba(0,0,0,0.93);
-        background-image: url(/assets/img/texture-nape.png);
+        background-image: url(assets/img/texture-nape.png);
         background-size: 50%;
         opacity: 0.7;
         p {
