--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,7 @@ header {
     color: white;
     font-weight: 900;
     text-shadow: 1px 0px 8px rgba(0, 0, 0, 0.93);
-    background-image: url(/assets/img/texture-nape.png) !important;
+    background-image: url("/assets/img/texture-nape.png");
     background-size: 50%;
     opacity: 0.7; }
     header #top-info p {
