--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -24,7 +24,7 @@ header {
         color: white;
         font-weight: 900;
         text-shadow: 1px 0px 8px rgba(0,0,0,0.93);
-        background-image: url("/assets/img/texture-nappe.png");
+        background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
         background-size: 50%;
         opacity: 0.7;
         p {
