--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -122,7 +122,7 @@ main {
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
             border-radius: 20px;
             height: 240px;
-            background-image: url("/assets/img/texture-nappe.png");
+            background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
             background-position: bottom;
             background-size: 50%;
             figure {
