--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -3,3 +3,4 @@
 // h1 typo
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rampart+One&family=Urbanist:ital,wght@1,100;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Rampart+One&family=Urbanist:ital,wght@1,100;1,900&display=swap');
