--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -7,6 +7,7 @@ main {
     display: flex;
     flex-direction: column;
     background-color: white;
+    border-top-left-radius: 30px;
     #call-to-action {
         position: relative;
         flex-basis: 100%;
@@ -20,13 +21,22 @@ main {
             justify-content: center;
             align-items: center;
         }
+        #ruban {
+            z-index: 4;
+            position: relative;
+            bottom: 637px;
+            left: 40px;
+            width: 5px;
+            object-fit: cover;
+            object-position: center;
+            rotate: 90deg;
+        }
         figure > img {
             width: 100%;
             max-width: 100%;
-            height: 350px;
+            height: 500px;
             object-fit: cover;
             z-index: 1;
-            border-bottom: solid 3px rgba(5, 5, 5, 0.747);
         }
         figure > div {
             display: flex;
@@ -34,30 +44,33 @@ main {
             flex-direction: column;
             justify-content: center;
             position: absolute;
-            top: 100px;
+            top: 10px;
             height: 140px;
             width: 200px;
-            background-color: rgba(250, 250, 246, 0.9);
+            background-color: rgba(250, 250, 246, 0);
             opacity: 0.9;
             border-radius: 3px;
             padding: 20px;
-            border: solid 3px rgba(5, 5, 5, 0.747);
+            border: solid 0px rgba(5, 5, 5, 0.747);
             a {
-                color: black;
+                margin-top: 80px;
+                color: white;
                 border: 2px solid black;
-                font-weight: 500;
+                font-weight: 700;
                 padding: 9px 2px;
                 text-align: center;
-                box-shadow: 1px 0px 8px rgba(0,0,0,0.93);
+                box-shadow: 1px 0px 8px rgba(255, 255, 255, 0.93);
                 //background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
                 border-radius: 4px;
                 box-shadow: 2px 6px 19px -7px rgba(0,0,0,0.4);
                 transition: all 1.4s;
-                opacity: 0.7;
-
+                background-color: black;
+                //background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
+                background-size: 60%;
                 &:hover {
                     color: white;
-                    background-color: black;
+                    background-color: rgba(153, 149, 129, 0.822);
+                    
                     opacity: 0.8;
                     box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
                     //background-image: linear-gradient(rgb(255, 0, 0), rgba(250, 250, 250, 0.473));
