--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -3,13 +3,15 @@ header {
     background-color: white;
     position: fixed;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: flex-end;
     padding: 40px 0 10px 0;
     width: 100%;
     z-index: 100;
-    border-bottom: solid 3px rgba(0, 0, 0, 0.747);
+
+
     a > img {
-        height: 145px;
+        height: 160px;
         width: auto;
     }
     #top-info {
