changed call to action

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -8,7 +8,8 @@ header {
     padding: 40px 0 10px 0;
     width: 100%;
     z-index: 100;
-
+    border-radius: 70px;
+    box-shadow: 1px 30px 30px -7px rgba(247, 246, 245, 0.7);
 
     a > img {
         height: 160px;
