--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,9 +73,7 @@ h1 {
   font-size: 1.9em;
   color: black;
   font-family: 'Playfair Display', serif;
-  border-radius: 20px;
-  padding: 10px 20px;
-  letter-spacing: -2; }
+  padding: 10px 30px 50px 40px; }
 
 h2 {
   font-size: 1.9em;
@@ -125,7 +123,9 @@ header {
   justify-content: flex-end;
   padding: 40px 0 10px 0;
   width: 100%;
-  z-index: 100; }
+  z-index: 100;
+  border-radius: 70px;
+  box-shadow: 1px 30px 30px -7px rgba(247, 246, 245, 0.7); }
   header a > img {
     height: 160px;
     width: auto; }
@@ -156,7 +156,7 @@ header {
     display: none; }
 
 main {
-  padding-top: 140px;
+  padding-top: 0px;
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -173,20 +173,13 @@ main {
       padding: 0;
       justify-content: center;
       align-items: center; }
-    main #call-to-action #ruban {
-      z-index: 4;
-      position: relative;
-      bottom: 637px;
-      left: 40px;
-      width: 5px;
-      object-fit: cover;
-      object-position: center;
-      rotate: 90deg; }
     main #call-to-action figure > img {
+      margin-top: 200px;
       width: 100%;
       max-width: 100%;
-      height: 500px;
+      height: 600px;
       object-fit: cover;
+      object-position: center;
       z-index: 1; }
     main #call-to-action figure > div {
       display: flex;
@@ -198,37 +191,45 @@ main {
       height: 140px;
       width: 200px;
       background-color: rgba(250, 250, 246, 0);
-      opacity: 0.9;
+      opacity: 1;
       border-radius: 3px;
       padding: 20px;
       border: solid 0px rgba(5, 5, 5, 0.747); }
       main #call-to-action figure > div a {
-        margin-top: 80px;
+        display: flex;
+        font-size: 40px;
+        position: relative;
+        top: 285px;
         color: white;
-        border: 2px solid black;
+        border: 5px solid white;
         font-weight: 700;
-        padding: 9px 2px;
-        text-align: center;
-        box-shadow: 1px 0px 8px rgba(255, 255, 255, 0.93);
-        border-radius: 4px;
-        box-shadow: 2px 6px 19px -7px rgba(0, 0, 0, 0.4);
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+        box-shadow: 1px 30px 40px -7px rgba(95, 83, 42, 0.39);
         transition: all 1.4s;
-        background-color: black;
-        background-size: 60%; }
+        background-color: #a9b8a6; }
         main #call-to-action figure > div a:hover {
           color: white;
-          background-color: rgba(153, 149, 129, 0.822);
-          opacity: 0.8;
+          background-color: #999581;
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4); }
   main #engagements {
-    margin-top: 30px;
     display: flex;
+    margin-top: -150px;
     padding: 20px;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 30px; }
+    row-gap: 30px;
+    z-index: 4;
+    padding-top: 40px;
+    background-color: white;
+    border-top-left-radius: 60px;
+    border-top-right-radius: 60px; }
     main #engagements article {
-      display: flex;
+      display: none;
       flex-direction: column;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
       border-radius: 20px; }
@@ -254,9 +255,8 @@ main {
       border-radius: 20px; }
   main #products {
     background-color: rgba(235, 231, 217, 0.432);
-    margin-top: 40px;
     display: flex;
-    padding: 50px 20px;
+    padding: 30px 20px;
     flex-direction: column;
     justify-content: space-between;
     row-gap: 30px; }
