--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -15,10 +15,7 @@ h1 {
     font-size: 1.9em;
     color: black;
     font-family: 'Playfair Display', serif;
-    border-radius: 20px;
-    padding: 10px 20px;
-    //text-shadow: 1px 0px 8px rgba(0,0,0,0.93);
-    letter-spacing: -2;
+    padding: 10px 30px 50px 40px;
 }
 
 h2 {
