--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,7 +3,7 @@
 
 
 main {
-    padding-top: 140px;
+    padding-top: 0px;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -21,21 +21,14 @@ main {
             justify-content: center;
             align-items: center;
         }
-        #ruban {
-            z-index: 4;
-            position: relative;
-            bottom: 637px;
-            left: 40px;
-            width: 5px;
-            object-fit: cover;
-            object-position: center;
-            rotate: 90deg;
-        }
         figure > img {
+            margin-top: 200px;
             width: 100%;
             max-width: 100%;
-            height: 500px;
+            height: 600px;
             object-fit: cover;
+            object-position: center;
+          
             z-index: 1;
         }
         figure > div {
@@ -48,30 +41,38 @@ main {
             height: 140px;
             width: 200px;
             background-color: rgba(250, 250, 246, 0);
-            opacity: 0.9;
+            opacity: 1;
             border-radius: 3px;
             padding: 20px;
             border: solid 0px rgba(5, 5, 5, 0.747);
             a {
-                margin-top: 80px;
+                display: flex;
+                font-size: 40px;
+                position: relative;
+                top: 285px;
                 color: white;
-                border: 2px solid black;
+                border: 5px solid white;
                 font-weight: 700;
-                padding: 9px 2px;
-                text-align: center;
-                box-shadow: 1px 0px 8px rgba(255, 255, 255, 0.93);
+                height: 100px;
+                width: 100px;
+                border-radius: 50%;
+                align-items: center;
+                align-self: center;
+                justify-content: center;
                 //background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
-                border-radius: 4px;
-                box-shadow: 2px 6px 19px -7px rgba(0,0,0,0.4);
+                box-shadow: 1px 30px 40px -7px rgba(95, 83, 42, 0.39);
                 transition: all 1.4s;
-                background-color: black;
+                background-color: rgb(169, 184, 166);
                 //background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
-                background-size: 60%;
+                //background-size: 60%;
+                //border-top: solid 2px rgb(73, 73, 218);
+                //border-left: solid 2px rgb(63, 63, 243);
+                //border-bottom: solid 2px red;
+               // border-right: solid 2px red;
                 &:hover {
                     color: white;
-                    background-color: rgba(153, 149, 129, 0.822);
+                    background-color: rgb(153, 149, 129);
                     
-                    opacity: 0.8;
                     box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
                     //background-image: linear-gradient(rgb(255, 0, 0), rgba(250, 250, 250, 0.473));
                 }
@@ -79,14 +80,20 @@ main {
         }
     }
     #engagements {
-        margin-top: 30px;
         display: flex;
-        padding: 20px;
+        margin-top: -150px;
+        padding: 20px ;
         flex-direction: column;
         justify-content: space-between;
         row-gap: 30px;
+        z-index: 4;
+        padding-top: 40px;
+        background-color: white;
+        border-top-left-radius: 60px;
+        border-top-right-radius: 60px;
         article {
-            display: flex;
+            display: none;
+            //display: flex;
             flex-direction: column;
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
             border-radius: 20px;
@@ -120,9 +127,8 @@ main {
     }
     #products {
         background-color: rgba(235, 231, 217, 0.432);
-        margin-top: 40px;
         display: flex;
-        padding: 50px 20px;
+        padding: 30px 20px;
         flex-direction: column;
         justify-content: space-between;
         row-gap: 30px;
