--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -80,6 +80,7 @@ main {
         }
     }
     #engagements {
+        box-shadow: 0px -50px 70px -10px rgba(95, 93, 93, 0.5);
         display: flex;
         margin-top: -150px;
         padding: 20px ;
