--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -8,8 +8,9 @@ header {
     padding: 40px 0 10px 0;
     width: 100%;
     z-index: 100;
-    border-radius: 70px;
-    box-shadow: 1px 30px 30px -7px rgba(247, 246, 245, 0.7);
+    border-bottom-right-radius: 70px;
+    border-bottom-left-radius: 70px;
+    box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.7);
 
     a > img {
         height: 160px;
