border top engagementds

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -11,6 +11,7 @@ header {
     border-bottom-right-radius: 70px;
     border-bottom-left-radius: 70px;
     box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
+    border-bottom: solid 10px rgba(180, 116, 116, 0.705);
 
     a > img {
         height: 160px;
