--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,8 @@ header {
   z-index: 100;
   border-bottom-right-radius: 70px;
   border-bottom-left-radius: 70px;
-  box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322); }
+  box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
+  border-bottom: solid 10px rgba(180, 116, 116, 0.705); }
   header a > img {
     height: 160px;
     width: auto; }
@@ -219,9 +220,10 @@ main {
           color: white;
           background-color: #999581;
           background-size: 300%;
-          box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4); }
+          box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164); }
   main #engagements {
-    box-shadow: 0px -50px 70px -10px rgba(95, 93, 93, 0.274);
+    box-shadow: 0px -60px 70px 60px rgba(88, 82, 82, 0.384);
+    border-top: solid 10px rgba(180, 116, 116, 0.705);
     display: flex;
     margin-top: -150px;
     padding: 20px;
