--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -76,14 +76,15 @@ main {
                     background-color: rgb(153, 149, 129);
                     background-size: 300%;
                     
-                    box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
+                    box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164);
                     //background-image: linear-gradient(rgb(255, 0, 0), rgba(250, 250, 250, 0.473));
                 }
             }
         }
     }
     #engagements {
-        box-shadow: 0px -50px 70px -10px rgba(95, 93, 93, 0.274);
+        box-shadow: 0px -60px 70px 60px rgba(88, 82, 82, 0.384);
+        border-top: solid 10px rgba(180, 116, 116, 0.705);
         display: flex;
         margin-top: -150px;
         padding: 20px ;
