items enagements new design

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -16,17 +16,19 @@ h1 {
     color: black;
     font-family: 'Playfair Display', serif;
     padding: 10px 30px 30px 40px;
+    
 }
 
 h2 {
-    font-size: 1.9em;
-    font-weight: 900;
+    font-size: 1.4em;
+    font-weight: 600;
     padding-bottom: 20px;
-    color: rgb(66, 65, 65);
-    font-family: 'Dancing Script', cursive;
+    color: rgb(15, 15, 15);
+    font-family: 'Playfair Display', serif;
     
 }
 h3 {
+    
     font-size: 0.8em;
     font-weight: 500;
     padding-bottom: 5px;
