--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,11 +76,11 @@ h1 {
   padding: 10px 30px 30px 40px; }
 
 h2 {
-  font-size: 1.9em;
-  font-weight: 900;
+  font-size: 1.4em;
+  font-weight: 600;
   padding-bottom: 20px;
-  color: #424141;
-  font-family: 'Dancing Script', cursive; }
+  color: #0f0f0f;
+  font-family: 'Playfair Display', serif; }
 
 h3 {
   font-size: 0.8em;
@@ -126,7 +126,7 @@ header {
   z-index: 100;
   border-bottom-right-radius: 70px;
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
-  border-bottom: solid 5px rgba(113, 204, 28, 0.308); }
+  border-bottom: solid 5px rgba(0, 0, 0, 0.267); }
   header a > img {
     height: 160px;
     width: auto; }
@@ -222,31 +222,35 @@ main {
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164); }
   main #engagements {
     box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.562);
-    border-top: solid 5px rgba(233, 124, 124, 0.473);
+    border-top: solid 5px rgba(8, 8, 8, 0.377);
     border-bottom: solid 2px rgba(95, 94, 94, 0.719);
     display: flex;
     margin-top: -170px;
     padding: 10px;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 50px;
+    row-gap: 20px;
     z-index: 4;
     padding-top: 35px;
     padding-bottom: 30px;
     background-color: white;
     border-top-left-radius: 60px;
-    background-image: url("/assets/img/texture-bois.png");
+    background-image: url("https://thumbs.dreamstime.com/b/gros-plan-de-la-texture-fond-planche-du-bureau-cuisine-en-bois-%C3%A0-retrancher-vieux-meuble-d%C3%A9coupante-vue-sup%C3%A9rieure-163686531.jpg");
     background-position: 0%; }
     main #engagements h2 {
-      font-size: 2.5em;
-      color: white;
-      padding-left: 30px; }
+      font-size: 2.2em;
+      color: rgba(48, 46, 46, 0.925);
+      font-weight: 900;
+      padding-left: 30px;
+      text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.226); }
     main #engagements article {
-      background-color: white;
+      background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6");
       display: flex;
       flex-direction: column;
-      box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
-      border-radius: 20px; }
+      box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.685);
+      border-radius: 20px;
+      padding: 5px;
+      opacity: 0.9; }
       main #engagements article figure {
         flex-basis: 90%; }
       main #engagements article img {
@@ -256,7 +260,13 @@ main {
         border-top-left-radius: 20px;
         object-fit: cover; }
       main #engagements article h3 {
-        padding: 15px; }
+        opacity: 0.8;
+        font-size: 1.4em;
+        font-family: 'Dancing Script', cursive;
+        color: white;
+        padding: 15px;
+        text-align: center;
+        text-shadow: 10px 0px 12px #f8f4f3; }
     main #engagements div {
       display: flex;
       flex-basis: 100%;
