--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,7 +3,7 @@
 
 
 main {
-    padding-top: 0px;
+    padding-top: 120px;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -21,13 +21,14 @@ main {
             justify-content: center;
             align-items: center;
         }
-        figure > img {
-            margin-top: 200px;
+        figure > video {
+            margin-top: 100px;
             width: 100%;
             max-width: 100%;
-            height: 600px;
+            height: 500px;
             object-fit: cover;
             object-position: center;
+            
           
             z-index: 1;
         }
@@ -46,12 +47,13 @@ main {
             padding: 20px;
             border: solid 0px rgba(5, 5, 5, 0.747);
             a {
+                opacity: 0.8;
                 display: flex;
                 font-size: 40px;
                 position: relative;
-                top: 285px;
+                top: 205px;
                 color: white;
-                border: 5px solid white;
+                border: 5px solid rgba(255, 255, 255, 0.863);
                 font-weight: 700;
                 height: 100px;
                 width: 100px;
@@ -62,14 +64,13 @@ main {
                 //background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
                 box-shadow: 1px 30px 40px -7px rgba(95, 83, 42, 0.39);
                 transition: background-size 0.4s;
-                background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
+                background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6");
                 //background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
                 //background-size: 60%;
                 //border-top: solid 2px rgb(73, 73, 218);
                 //border-left: solid 2px rgb(63, 63, 243);
                 //border-bottom: solid 2px red;
                // border-right: solid 2px red; 
-               background-size: 200%;
                 &:hover {
                     font-size: 50px;
                     color: white;
@@ -162,11 +163,11 @@ main {
             opacity: 0.8;
             padding: 10px;
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
             border-radius: 20px;
             height: 240px;
-            background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
+            background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6");
             background-position: bottom;
             background-size: 50%;
             figure {
@@ -181,8 +182,13 @@ main {
                 object-position: bottom;
             }
             h3 {
+                opacity: 0.9;
+                font-size: 1.9em;
+                font-family: 'Dancing Script', cursive;
+                color: white;
                 padding: 15px;
-                width: 20%;
+                text-align: center;
+                text-shadow: 10px 0px 12px rgb(248, 244, 243);
             }
         }
         h2 {
