--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -27,12 +27,18 @@ header {
         width: 100%;
         color: white;
         font-weight: 900;
+        box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
         text-shadow: 1px 0px 8px rgba(0,0,0,0.93);
-        background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
-        background-size: 50%;
-        opacity: 0.7;
+        background-image: url("https://us.123rf.com/450wm/natthanim/natthanim1801/natthanim180100029/92712257-texture-d-ardoise-noire-gris-fonc%C3%A9-en-motif-naturel-avec-une-haute-r%C3%A9solution-pour-le-fond-et-le-tra.jpg?ver=6"); 
+        
+        opacity: 0.95;
         p {
             text-align: center;
+            font-family: 'Dancing Script', cursive;
+            color: white;
+            padding: 15px;
+            text-align: center;
+            text-shadow: 10px 0px 12px rgb(248, 244, 243);
         }
     }
     #icons-bars-menu {
