--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -85,7 +85,7 @@ main {
     }
     #engagements {
         box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.562);
-        border-top: solid 3px rgba(167, 6, 6, 0.795);
+        border-top: solid 3px rgb(0, 0, 0);
         border-bottom: solid 2px rgba(95, 94, 94, 0.719);
         display: flex;
         margin-top: -120px;
