--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -13,7 +13,8 @@ header {
     border-bottom: solid 5px rgba(0, 0, 0, 0.733);
 
     a > img {
-        height: 160px;
+        padding-top: 20px;
+        height: 190px;
         width: auto;
     }
     #top-info {
