--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -20,15 +20,15 @@ main {
             justify-content: center;
             align-items: center;
         }
-        figure > video {
+        figure > img {
             opacity: 1;
-            margin-top: 100px;
+            margin-top: 150px;
             width: 100%;
             max-width: 100%;
-            height: 500px;
+            height: 550px;
             object-fit: cover;
             object-position: center;
-            
+                       
           
             z-index: 1;
         }
@@ -74,7 +74,7 @@ main {
                 &:hover {
                     font-size: 50px;
                     color: white;
-                    background-color: rgb(153, 149, 129);
+                    background-color: rgb(104, 102, 92);
                     background-size: 300%;
                     
                     box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164);
@@ -84,11 +84,13 @@ main {
         }
     }
     #engagements {
-        box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.562);
+        -webkit-box-shadow: 0px 0px 58px 34px rgba(74, 75, 90, 1);
+        -moz-box-shadow: 0px 0px 58px 34px rgba(74, 75, 90, 1);
+        box-shadow: 0px 0px 58px 34px rgba(204, 204, 211, 0.589);
         border-top: solid 3px rgb(0, 0, 0);
         border-bottom: solid 2px rgba(95, 94, 94, 0.719);
         display: flex;
-        margin-top: -120px;
+        margin-top: -145px;
         padding: 10px ;
         flex-direction: column;
         justify-content: space-between;
