--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -20,13 +20,14 @@ h1 {
 }
 
 h2 {
-    font-size: 1.9em;
-    font-weight: 600;
+    font-size: 1.6em;
+    font-weight: 500;
     padding-bottom: 20px;
     color: rgb(15, 15, 15);
     font-family: 'Playfair Display', serif;
     text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.075);
     padding-left: 4px;
+    opacity: 0.8;
     
 }
 h3 {
