--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -20,14 +20,15 @@ h1 {
 }
 
 h2 {
-    font-size: 1.6em;
-    font-weight: 500;
-    padding-bottom: 20px;
+    font-size: 1.4em;
+    font-weight: 300;
+    padding-bottom: 10px;
     color: rgb(15, 15, 15);
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto';
     text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.075);
     padding-left: 4px;
     opacity: 0.8;
+    padding-top: 15px;
     
 }
 h3 {
